Added RecyclerView, adapter

--- a/app/src/main/res/layout/current_day_fragment.xml
+++ b/app/src/main/res/layout/current_day_fragment.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/currentDateTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Current day"
@@ -27,10 +27,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/currentDateTextView" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/currentDayRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="32dp"
