--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -102,7 +102,7 @@
                 android:layout_weight="2"
                 android:text="@string/activity_add_task_Importance"
                 android:textAlignment="textStart"
-                android:textSize="20sp" />
+                android:textSize="@dimen/text_size_title" />
 
             <Spinner
                 android:id="@+id/importanceSpinner"
@@ -146,7 +146,7 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="@string/activity_add_task_show_map"
-                android:textSize="20sp" />
+                android:textSize="@dimen/text_size_title" />
 
             <CheckBox
                 android:id="@+id/showMapCheckBox"
@@ -175,7 +175,7 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="@string/activity_add_task_snap"
-                android:textSize="20sp" />
+                android:textSize="@dimen/text_size_title" />
 
             <CheckBox
                 android:id="@+id/addContactCheckBox"
@@ -217,7 +217,7 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="@string/activity_add_task_add_to_calendar"
-                android:textSize="20sp" />
+                android:textSize="@dimen/text_size_title" />
 
             <CheckBox
                 android:id="@+id/addCalendarAndroidCheckBox"
@@ -236,7 +236,7 @@
             android:layout_marginBottom="16dp"
             android:background="@color/design_default_color_primary"
             android:text="@string/activity_add_task_save"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_size_button_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
