--- a/app/src/main/res/layout/activity_show_task.xml
+++ b/app/src/main/res/layout/activity_show_task.xml
@@ -133,18 +133,32 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/snapContactTextViewShowActivity"
-        android:layout_width="wrap_content"
+        android:id="@+id/labelSnapContactTextViewShowActivity"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textSize="@dimen/text_size_values_show_activity"
-        android:background="@color/design_default_color_background"
+        android:textSize="@dimen/text_size_title_show_activity"
+        android:text="@string/tied_contact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+
+    <TextView
+        android:id="@+id/snapContactTextViewShowActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/design_default_color_background"
+        android:textSize="@dimen/text_size_values_show_activity"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelSnapContactTextViewShowActivity" />
 
     <TextView
         android:id="@+id/textView6"
