--- a/app/src/main/res/layout/current_day_fragment.xml
+++ b/app/src/main/res/layout/current_day_fragment.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <import type="android.view.View" />
+        <variable
+            name="viewModel" type="com.ivanasharov.smartplanner.presentation.viewModel.CurrentDayViewModel" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +18,7 @@
         android:id="@+id/currentDateTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Current day"
+        android:text="@{viewModel.date}"
         android:textSize="@dimen/text_size_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,12 +28,17 @@
         android:id="@+id/countTasksTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task"
+        android:text="@{viewModel.statusOfTasks}"
         android:textSize="@dimen/text_size_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentDateTextView" />
+
+    <include
+        android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}"
+        android:id="@+id/waiting"
+        layout="@layout/waiting_layout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/currentDayRecyclerView"
@@ -36,7 +47,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="32dp"
-
+        android:visibility="@{viewModel.isLoading() ? View.GONE : View.VISIBLE}"
+        app:spanCount="1"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:layout_marginBottom="16dp"
         android:background="@color/primary_light"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,3 +72,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
