--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -9,7 +9,7 @@
             name="mainViewModel"
             type="com.ivanasharov.smartplanner.presentation.viewModel.CurrentDayViewModel" />
     </data>
-<RelativeLayout
+<LinearLayout
         app:cardCornerRadius="4dp"
         android:layout_margin="4dp"
         android:layout_width="match_parent"
@@ -17,22 +17,24 @@
         android:background="@color/design_default_color_background"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/titleTextViewItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/currentDayCheckBoxItem"
-            android:paddingRight="10dp"
-            android:text="@{viewModel.name}"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/titleTextViewItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="5"
+        android:gravity="center_vertical"
+        android:paddingStart="@dimen/text_size_main_text"
+        android:text="@{viewModel.name}"
+        android:textAlignment="textStart"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
         <CheckBox
             android:id="@+id/currentDayCheckBoxItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="@{viewModel.status}"
-            android:layout_alignParentEnd="true" />
+            android:layout_weight="1" />
 
-</RelativeLayout>
+</LinearLayout>
 </layout>
