--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,8 +12,8 @@
         android:icon="@drawable/ic_planning"
         android:title="@string/tab_3_planning" />
 
-    <item android:id="@+id/informationFragment"
+    <item android:id="@+id/weatherFragment"
         android:icon="@drawable/ic_info"
-        android:title="@string/tab_4_info" />
+        android:title="@string/tab_4_weather" />
 
 </menu>
