--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
         <color name="not_important_and_not_urgent">#FFFF00</color>
         <color name="no_importance">#DCDCDC</color>
 
+        <color name="background_day">#FFDEAD</color>
+        <color name="background_night">#191970</color>
+        <color name="background_nan">#E0FFFF</color>
+
 </resources>
